# photoCaptionHR

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  build.ps1  gui.py  main.py  photosign.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: ocr_engine.py  runner.py  task_cert.py  task_excel.py
utils/: file_utils.py  image_draw.py  table_detect.py
